[package]
name = "chain-bot"
version = "0.1.0"
authors = ["Nikolay Chechulin <nchechulin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markov = "1.1.0"

futures = "0.3.25"
telegram-bot = "0.7.0"
teloxide = "0.11"
teloxide-macros = "0.3"

log = "0.4.8"
pretty_env_logger = "0.4.0"

tokio = { version =  "0.3.7", features = ["rt-threaded", "macros"] }